# elicitation

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
examples/: example_conformity_cossim.py  example_conformity_perplexity.py  example_dialoguegen.py  example_interaction_metrics.ipynb
examples/sample_data/yield-v1-small1pct-finetuning/dev/: dev-000.jsonl
examples/sample_data/yield-v1-small1pct-finetuning/test/: test-000.jsonl
examples/sample_data/yield-v1-small1pct-finetuning/train/: train-000.jsonl
examples/sample_data/yield-v1-small1pct/dev/: dev-000.json
examples/sample_data/yield-v1-small1pct/test/: test-000.json
examples/sample_data/yield-v1-small1pct/train/: train-000.json
src/elicitation/metrics/: __init__.py  conformity_cossim.py  conformity_perplexity.py  context_response_length.py  progression.py  turn_length_ratio.py  utils.py
src/elicitation/utils/: __init__.py  generate_utterances.py  utterances_to_dialogue.py
